-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0
-
None
-
-
d456102962 (qt/qtbase/dev) d456102962 (qt/tqtc-qtbase/dev) f33faec980 (qt/qtbase/6.2) f33faec980 (qt/tqtc-qtbase/6.2) f33faec980 (qt/tqtc-qtbase/6.2.4)
-
Team One Foundation Sprint 51
tst_QFontDatabase::systemFixedFont fails on Android for Qt 6.0.0
agent:2020/09/24 10:19:39 build.go:302: FAIL! : tst_QFontDatabase::systemFixedFont() 'fdbSaysFixed' returned FALSE. () agent:2020/09/24 10:19:39 build.go:302: Loc: [tst_qfontdatabase.cpp(171)] agent:2020/09/24 10:19:39 build.go:302: Totals: 11 passed, 1 failed, 14 skipped, 0 blacklisted, 83ms agent:2020/09/24 10:19:40 build.go:302: make[3]: Leaving directory '/home/qt/work/qt/qtbase/tests/auto/gui/text/qfontdatabase' agent:2020/09/24 10:19:40 build.go:302: make[2]: *** [Makefile:1575: sub-qfontdatabase-check] Error 2
- resulted from
-
QTBUG-98120
Fix failing qtbase CI tests for Android
-
- In Progress
-
-
QTBUG-87025
Report Android failing tests in CI
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-87405 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 394780,3 | Set Roboto as the default font on Android | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 394850,2 | Make Droid Sans Mono available as fixed font for all Android styles | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 395833,2 | Make Droid Sans Mono available as fixed font for all Android styles | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 395834,2 | Make Droid Sans Mono available as fixed font for all Android styles | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |